Fixed reloading issue. Fixed Padding bottom issue on mobile. Fixed burger button anim.3

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,6 +46,12 @@ body {
     -webkit-box-shadow: inset 0 0 2px $primaryColor;
     box-shadow: inset 0 0 5px $primaryColor;
   }
+  @include mobile {
+    padding-bottom: 20%;
+  }
+  @include xsmobile {
+    padding-bottom: 20%;
+  }
 }
 
 strong {
